[package]
name = "newsletter-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm-wasm = { version = "0.14.6", features = ["console", "fields"] }
wasm-bindgen = "0.2.74"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
